--- a/composer.json
+++ b/composer.json
@@ -7,16 +7,10 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Zeeshan @ APIMATIC",
-            "email": "zeeshan@apimatic.io",
+            "name": "Mehdi Jaffery",
+            "email": "mehdi.jaffery@apimatic.io",
             "homepage": "https://github.com/apimatic",
             "role": "Developer"
-        }
-    ],
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/apimatic/unirest-php"
         }
     ],
     "require": {
@@ -24,7 +18,8 @@
         "ext-curl": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "apimatic/unirest-php": "dev-master"
+        "mashape/unirest-php": "~3.0.1",
+        "apimatic/jsonmapper": "~1.0.0"
     },
     "autoload": {
         "psr-4": {
